syntax = "proto3";

option csharp_namespace = "Manage.gRPC.Identity";

package users;

service Users {
  rpc SendUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  string phonenumber = 1;
  string username = 2;
  string email = 3;
  string validation = 4;
  string lastLogin = 5;
}
